<?xml version="1.0"?>
<package>
  <name>norm_2d</name>
  <version>1.0.0</version>
  <description>The norm_2d package</description>
  <maintainer email="ulas.b@milvusrobotics.com">Ulas Sureyya Bingol</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
<!--  <build_depend>nav_msgs</build_depend>
  <run_depend>occupancy_grid_utils</run_depend>
-->
</package>
